--- a/careers.html
+++ b/careers.html
@@ -2,7 +2,10 @@
 <html lang="en"> 
     <head>   
         <title> Shark IT Service</title>
-
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="csrf-token" content="45VoxTOaNWNwseO34OEy5jFVx5j8d8v8l4Jx1oUB">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
         <link rel="stylesheet" href="cdn.jsdelivr.net/npm/bootstrap%404.6.2/dist/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="website/css/animate.css" />
         <link rel="stylesheet" type="text/css" href="website/css/owl.carousel.css">
@@ -977,7 +980,7 @@
                         <div class="section-title clearfix">
                             <div class="title-header title-style-left">
                                 <h5>Career</h5>
-                                <h1 class="tittle">We are looking for a creative, enthusiastic, self-motivated and unique personality who can easily adapt to  <span class="color-red">our growing corporate culture!</span>
+                                <h1 class="tittle">We are looking for <span class="color-red">our culture!</span>
                                 </h1>
                             </div>
                             <div class="title-desc">
