--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en"> 
     <head>   
-        <title> Shark IT Service</title>
 
+        <title> Shark IT Service</title>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="csrf-token" content="45VoxTOaNWNwseO34OEy5jFVx5j8d8v8l4Jx1oUB">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
         <link rel="stylesheet" href="cdn.jsdelivr.net/npm/bootstrap%404.6.2/dist/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="website/css/animate.css" />
         <link rel="stylesheet" type="text/css" href="website/css/owl.carousel.css">
@@ -216,7 +220,7 @@
                                                             <h5>Office Address</h5>
                                                         </div>
                                                         <div class="featured-desc">
-                                                            <p>Shankhamul, Kathmandu, Nepal</p>
+                                                            <p>Nepalgunj Banke, Nepal</p>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -472,7 +476,7 @@
                                                 <div class="address mb-3">
                                                     <h5><i class="fa fa-map-marker"></i>&nbsp;
                                                         Address</h5>
-                                                    <p>Shankhamul, Kathmandu, Nepal</p>
+                                                    <p>Nepalgunj,, Nepal</p>
                                                 </div>
                                             </div>
                                             <div class="col-lg-6 col-md-6 pr-4">
@@ -5022,12 +5026,12 @@
                                             <!-- Livewire Component wire-end:ZnRSFY4PmejwdZydMSbs -->                            <small>Sign up today to know more about our platform and services.</small>
                                             <div class="social-icons square social-hover mt-20">
                                                 <ul class="list-inline">
-                                                        <li class="social-facebook"><a class="tooltip-top" target="_blank" href="https://twitter.com/Sharkit" data-tooltip="facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                                        <li class="social-twitter"><a class="tooltip-top" target="_blank" href="https://twitter.com/Sharkit" data-tooltip="Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                                                        <li class="social-instagram"><a class=" tooltip-top" target="_blank" href="https://www.instagram.com/Sharkit" data-tooltip="Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                                                        <li class="social-linkedin"><a class=" tooltip-top" target="_blank" href="https://www.linkedin.com/company/Sharkit-infosys" data-tooltip="LinkedIn"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                                                        <li class="social-youtube"><a class=" tooltip-top" target="_blank" href="https://www.youtube.com/channel/Sharkit" data-tooltip="YouTube"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
-                                                        <li class="social-whatsapp"><a class=" tooltip-top" href="whatsapp:+9779801848492" data-tooltip="Whatsapp"><i class="fa fa-whatsapp" aria-hidden="true"></i></a></li>
+                                                    <li class="social-facebook"><a class="tooltip-top" target="_blank" href="https://twitter.com/Sharkit" data-tooltip="facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                                    <li class="social-twitter"><a class="tooltip-top" target="_blank" href="https://twitter.com/Sharkit" data-tooltip="Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                                    <li class="social-instagram"><a class=" tooltip-top" target="_blank" href="https://www.instagram.com/Sharkit" data-tooltip="Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                                                    <li class="social-linkedin"><a class=" tooltip-top" target="_blank" href="https://www.linkedin.com/company/Sharkit-infosys" data-tooltip="LinkedIn"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                                                    <li class="social-youtube"><a class=" tooltip-top" target="_blank" href="https://www.youtube.com/channel/Sharkit" data-tooltip="YouTube"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+                                                    <li class="social-whatsapp"><a class=" tooltip-top" href="whatsapp:+9779801848492" data-tooltip="Whatsapp"><i class="fa fa-whatsapp" aria-hidden="true"></i></a></li>
                                                 </ul>
                                             </div>
                                         </div>
