--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,10 @@
 <html lang="en"> 
     <head>   
         <title> Shark IT Service</title>
-
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="csrf-token" content="45VoxTOaNWNwseO34OEy5jFVx5j8d8v8l4Jx1oUB">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
         <link rel="stylesheet" href="cdn.jsdelivr.net/npm/bootstrap%404.6.2/dist/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="website/css/animate.css" />
         <link rel="stylesheet" type="text/css" href="website/css/owl.carousel.css">
