--- a/index.html
+++ b/index.html
@@ -662,9 +662,9 @@
                         <div id="site-header-menu" class="site-header-menu">
                             <div class="site-header-menu-inner ttm-stickable-header">
                                 <div class="container">
-                                    <div class="site-branding">
-                                        <a class="home-link" style="color:#003893;" href="index.html" rel="home">
-                                            <img id="logo-img" class="img-center lazyload" src="uploads/settings/sharkit.png" alt="Shark IT Service"><b> Shark IT Service <span class="text-danger"> Pvt. Ltd.</span></b>
+                                    <div class="site-branding" >
+                                        <a class="home-link" href="index.html" rel="home">
+                                            <img id="logo-img"class="img-center lazyload" src="uploads/settings/sharkitservice.png"  alt="Shark IT Service">
                                         </a>
                                     </div>
                                     <!--site-navigation -->
@@ -932,8 +932,8 @@
                                                         </li>
                                                     </ul>
                                                 </li>
-<!--                                                <li class=""><a href="careers.html">Careers</a>
-                                                </li>-->
+                                                <!--                                                <li class=""><a href="careers.html">Careers</a>
+                                                                                                </li>-->
                                                 <li class=""><a href="contact.html">Contact Us</a>
                                                 </li>
                                             </ul>
@@ -4290,7 +4290,7 @@
                     <!-- portfolio-section end -->
 
                     <!-- our-partner-section -->
-                   
+
                     <!-- our-partner-section END-->
 
                     <!-- process-section end -->
